minor css changes

--- a/musicProject/Views/Album/Create.cshtml
+++ b/musicProject/Views/Album/Create.cshtml
@@ -22,6 +22,6 @@
             <label for="Released">Released</label>
             <input id="createInput" type="date" class="form-control" name="Released" placeholder="2024" />
         </div>
-        <button id="createButton" type="submit" class="btn btn-primary btn-block mt-2">Create</button>
+        <button id="createArtistButton" type="submit" class="btn btn-primary btn-block mt-2">Create</button>
     </form>
 </div>
