--- a/musicProject/Views/Artist/Create.cshtml
+++ b/musicProject/Views/Artist/Create.cshtml
@@ -6,6 +6,6 @@
             <label for="Name">Artist Name</label>
             <input id="createInput" asp-for="Name" class="form-control" name="Name" placeholder="Name" />
         </div>
-        <button id="createButton" type="submit" class="btn btn-block ">Create</button>
+        <button id="createArtistButton" type="submit" class="btn btn-block ">Create</button>
     </form>
 </div>
