--- a/musicProject/Views/TrackReview/Update.cshtml
+++ b/musicProject/Views/TrackReview/Update.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div id="saveButton" class="form-group">
-                <input id="createInput" class="form-control" type="submit" value="Save" class="btn btn-primary" />
+                <input id="createInputButton" class="form-control" type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
