--- a/musicProject/Views/Home/Index.cshtml
+++ b/musicProject/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
         </a>
         <a asp-action="NewIndex" asp-controller="TrackReview">
             <div class="text-center" id="homePage4">
-                <img src="./Images/graduationCover.jpg" alt="could not load image" />
+                <img src="./Images/070yckm.jpg" alt="could not load image" />
                 <p>Review your favorite tracks here</p>
             </div>
         </a>
